crates/analyzer/tests/snapshots/errors__cannot_move.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: value must be copied to memory
  ┌─ compile_errors/cannot_move.fe:5:16
  │
5 │         return self.data
  │                ^^^^^^^^^ this value is in storage
  │
  = Hint: values located in storage can be copied to memory using the `to_mem` function.
  = Example: `self.my_array.to_mem()`


