crates/analyzer/tests/snapshots/errors__cannot_move2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `+` operands must be numeric
  ┌─ compile_errors/cannot_move2.fe:5:34
  │
5 │         let c: Array<u256, 20> = x + y
  │                                  ^   ^ this has type `Array<u256, 10>`
  │                                  │    
  │                                  this has type `Array<u256, 10>`


