crates/analyzer/tests/snapshots/errors__circular_dependency_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `Foo.create(...)` called within `Foo` creates an illegal circular dependency
  ┌─ compile_errors/circular_dependency_create.fe:5:28
  │
5 │         let foo: Foo = Foo.create(ctx, 0)
  │                            ^^^^^^ Contract creation
  │
  = Note: Consider using a dedicated factory contract to create instances of `Foo`


